--- a/index.html
+++ b/index.html
@@ -1,182 +1,148 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>라벨 개수 추정 계산기 (지름 기반)</title>
-  <style>
-    :root { --bg:#0b0f14; --card:#121820; --ink:#e7eef8; --muted:#9fb3c8; --accent:#6aa6ff; --danger:#ff6a7a; }
-    * { box-sizing: border-box; }
-    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background:var(--bg); color:var(--ink); }
-    .wrap { max-width: 900px; margin: 24px auto; padding: 16px; }
-    .title { font-weight: 800; letter-spacing: -0.3px; font-size: clamp(20px, 2.4vw, 28px); }
-    .sub { color: var(--muted); margin-top: 6px; font-size: 14px; }
-    .grid { display:grid; gap:12px; grid-template-columns: 1fr; }
-    @media (min-width: 760px){ .grid.cols-2{ grid-template-columns: 1fr 1fr;} }
-    .card { background: var(--card); border: 1px solid #1d2631; border-radius: 16px; padding:16px; box-shadow: 0 10px 30px rgba(0,0,0,.25); }
-    .card h2{ margin:0 0 8px; font-size:18px; }
-    label { display:block; font-size:12px; color: var(--muted); margin: 8px 0 6px; }
-    input, button { width: 100%; padding: 12px 14px; border-radius: 12px; border: 1px solid #2a3441; background:#0e141b; color: var(--ink); font-size: 14px; }
-    input:focus { outline: 2px solid var(--accent); border-color: var(--accent); }
-    .row { display:flex; gap:8px; align-items:center; }
-    .row > * { flex:1; }
-    .hint { color: var(--muted); font-size: 12px; }
-    .btn { cursor:pointer; transition: .15s ease; }
-    .btn:hover { filter: brightness(1.1); }
-    .btn.primary { background: linear-gradient(180deg, #7bb4ff, #5a93ec); color:#061222; border: none; font-weight: 700; }
-    .btn.ghost { background: transparent; border: 1px dashed #334055; color: var(--muted);}    
-    .btn.warn { background: #29151a; border: 1px solid #522632; color: #ffb4bf; }
-    .error { color: var(--danger); font-size: 13px; margin-top: 8px; display:none; }
-    .result { font-size: clamp(22px, 3vw, 32px); font-weight: 800; letter-spacing: -0.4px; }
-    .result small { font-weight: 500; color: var(--muted); font-size: 12px; }
-    .muted { color: var(--muted); }
-    details { border-top: 1px solid #223042; padding-top: 12px; margin-top: 12px; }
-    code { background:#0a1016; border:1px solid #1e2a38; padding:2px 6px; border-radius:8px; }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>라벨 개수 계산기</title>
+<style>
+  :root {
+    --bg:#f9fafb; --card:#fff; --ink:#111827; --muted:#6b7280;
+    --okbg:#ecfdf5; --okbd:#34d399;
+    --warnbg:#fef2f2; --warnbd:#f87171;
+    --bd:#e5e7eb; --btn:#111827;
+  }
+  body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
+         background: var(--bg); color: var(--ink); margin: 0; padding: 20px; }
+  .wrap { max-width: 640px; margin: 0 auto; }
+  h1 { font-size: 1.4rem; margin-bottom: 6px; }
+  .sub { color: var(--muted); font-size: 0.9rem; margin-bottom: 16px; }
+  .card { background: var(--card); border: 1px solid var(--bd);
+          border-radius: 14px; padding: 16px; margin-bottom: 14px;
+          box-shadow: 0 4px 10px rgba(0,0,0,0.04); }
+  label { display:block; font-size:0.9rem; font-weight:600; margin-bottom:4px; }
+  input { width:100%; padding:10px 12px; border:1px solid #d1d5db;
+          border-radius:8px; font-size:1rem; }
+  .row { display:flex; gap:12px; flex-wrap:wrap; }
+  .col { flex:1 1 140px; }
+  .result { margin-top:10px; padding:12px; border-radius:10px;
+            background:var(--okbg); border:1px solid var(--okbd);
+            font-weight:800; font-size:1.1rem; display:none; }
+  .warn { margin-top:10px; padding:10px; border-radius:10px;
+          background:var(--warnbg); border:1px solid var(--warnbd);
+          color:#b91c1c; font-size:0.95rem; display:none; }
+  details { margin-top:10px; font-size:0.9rem; color:var(--muted); }
+  .footer { text-align:center; margin-top:20px; font-size:0.8rem; color:var(--muted); }
+  .spacer { height:8px; }
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="title">라벨 개수 추정 계산기 (지름 기반)</div>
-    <div class="sub">바깥지름·속지름·높이로 계산. 동일 재질/두께일 때 라벨 개수는 <b>부피에 비례</b>한다고 가정. 단위는 <b>cm</b>, 결과는 소수점 <b>1</b>자리까지 표시.</div>
+<div class="wrap">
+  <h1>라벨 개수 계산기</h1>
+  <div class="sub">단위는 <b>cm</b>이며, 동일 재질/두께일 때 라벨 개수는 <b>부피에 비례</b>한다고 가정합니다.</div>
 
-    <div class="grid cols-2" style="margin-top:14px;">
-      <section class="card">
-        <h2>입력</h2>
-        <div class="grid cols-2">
-          <div>
-            <label>완롤 바깥지름</label>
-            <input id="a1" type="number" step="0.1" placeholder="예: 27.7" />
-          </div>
-          <div>
-            <label>비교롤 바깥지름</label>
-            <input id="a2" type="number" step="0.1" placeholder="예: 26.5" />
-          </div>
-        </div>
-
-        <div class="grid cols-2">
-          <div>
-            <label>속지름 (지관의 외경)</label>
-            <input id="b" type="number" step="0.1" placeholder="예: 8.5" />
-          </div>
-          <div>
-            <label>높이</label>
-            <input id="h" type="number" step="0.1" placeholder="예: 8.3" />
-          </div>
-        </div>
-
-        <div class="grid cols-2">
-          <div>
-            <label>완롤 라벨 개수</label>
-            <input id="n1" type="number" step="1" placeholder="예: 1000" />
-          </div>
-          <div>
-            <label class="muted">안내</label>
-            <div class="hint">높이와 속지름은 완롤·비교롤이 동일하다고 가정해 한 번만 입력.</div>
-          </div>
-        </div>
-
-        <div class="row" style="margin-top:8px;">
-          <button class="btn primary" id="calc">계산하기</button>
-          <button class="btn ghost" id="reset">초기화</button>
-          <button class="btn warn" id="prefill">예시 불러오기</button>
-        </div>
-        <div id="err" class="error"></div>
-      </section>
-
-      <section class="card">
-        <h2>결과</h2>
-        <div class="result" id="result">—</div>
-        <div id="explain" class="hint" style="margin-top:8px; line-height:1.6;"></div>
-        <details>
-          <summary>계산식 보기</summary>
-          <div class="hint" style="margin-top:8px;">
-            동일 재질/두께 가정 시 라벨 개수는 원통 고리(annulus) 부피에 비례합니다:<br/>
-            <code>부피 = π × 높이 × (바깥지름² − 속지름²)</code>
-            <div style="margin-top:6px"></div>
-            높이가 동일할 때,
-            <code>비교롤 개수 = 완롤 개수 × (비교롤 바깥지름² − 속지름²) / (완롤 바깥지름² − 속지름²)</code>
-          </div>
-        </details>
-      </section>
+  <div class="card">
+    <!-- 1행: 완롤 바깥지름, 속지름 -->
+    <div class="row">
+      <div class="col">
+        <label>완롤 바깥지름 (cm)</label>
+        <input id="a1" type="text" inputmode="decimal" placeholder="예: 27.7">
+      </div>
+      <div class="col">
+        <label>속지름 (cm)</label>
+        <input id="b" type="text" inputmode="decimal" placeholder="예: 8.5">
+      </div>
     </div>
 
-  
-  <script>
-    const $ = (s)=>document.querySelector(s);
+    <!-- 2행: 높이, 완롤 라벨 개수 -->
+    <div class="row">
+      <div class="col">
+        <label>높이 (cm)</label>
+        <input id="h" type="text" inputmode="decimal" placeholder="예: 8.3">
+      </div>
+      <div class="col">
+        <label>완롤 라벨 개수 (개)</label>
+        <input id="n1" type="text" inputmode="numeric" placeholder="예: 1000">
+      </div>
+    </div>
 
-    const fmt1 = (n)=> {
-      if (!isFinite(n)) return '—';
-      return Number(n).toLocaleString(undefined, { maximumFractionDigits: 1, minimumFractionDigits: 1 });
-    };
+    <!-- 한 줄 띄우고 비교롤 바깥지름 -->
+    <div class="spacer"></div>
+    <div class="row">
+      <div class="col">
+        <label>비교롤 바깥지름 (cm)</label>
+        <input id="a2" type="text" inputmode="decimal" placeholder="예: 26.5">
+      </div>
+    </div>
 
-    const compute = ()=>{
-      const a1 = +$('#a1').value;
-      const a2 = +$('#a2').value;
-      const b  = +$('#b').value;
-      const h  = +$('#h').value; // 높이는 동일 가정으로 비율에서 소거되지만, 입력 검증용
-      const n1 = +$('#n1').value;
+    <div id="warn" class="warn"></div>
+    <div id="out" class="result"></div>
+    <details id="detail" style="display:none">
+      <summary>계산 과정 확인하기</summary>
+      <div id="detailText"></div>
+    </details>
+    <div class="sub">숫자를 입력하시면 자동으로 계산됩니다.</div>
+  </div>
 
-      const err = [];
-      if (!a1 || !a2 || !b || !h || !n1) err.push('모든 필드를 올바르게 입력해줘.');
-      if (a1 && b && a1 <= b) err.push('완롤 바깥지름은 속지름보다 커야 해.');
-      if (a2 && b && a2 <= b) err.push('비교롤 바깥지름은 속지름보다 커야 해.');
-      if (h && h <= 0) err.push('높이는 0보다 커야 해.');
-      if (n1 && n1 <= 0) err.push('완롤 라벨 개수는 0보다 커야 해.');
+  <div class="footer">© 라벨 개수 계산기 · 단일 HTML 파일</div>
+</div>
 
-      if (err.length){
-        $('#err').style.display='block';
-        $('#err').textContent = err[0];
-        $('#result').textContent='—';
-        $('#explain').textContent='';
-        return;
-      }
+<script>
+function parseNum(v){
+  if(typeof v !== 'string') return NaN;
+  v = v.trim().replace(/,/g,'.').replace(/[^0-9.\\-]/g,'');
+  return parseFloat(v);
+}
+function round1(x){ return Math.round(x*10)/10; }
 
-      $('#err').style.display='none';
+function calc(){
+  const warn = document.getElementById('warn');
+  const out = document.getElementById('out');
+  const detail = document.getElementById('detail');
+  const detailText = document.getElementById('detailText');
 
-      const num = (a2*a2 - b*b);
-      const den = (a1*a1 - b*b);
+  warn.style.display='none'; out.style.display='none'; detail.style.display='none'; warn.textContent='';
 
-      if (den <= 0){
-        $('#err').style.display='block';
-        $('#err').textContent = '완롤 바깥지름² − 속지름²가 0 이하로 계산돼. 값을 확인해줘.';
-        $('#result').textContent='—';
-        $('#explain').textContent='';
-        return;
-      }
+  const a1 = parseNum(document.getElementById('a1').value);
+  const a2 = parseNum(document.getElementById('a2').value);
+  const b  = parseNum(document.getElementById('b').value);
+  const h  = parseNum(document.getElementById('h').value);
+  const n1 = parseNum(document.getElementById('n1').value);
 
-      // 높이는 동일 가정 → (h/h) = 1
-      const ratio = (num/den);
-      const n2 = n1 * ratio;
+  // 모두 채우기 전에는 조용히 대기
+  if ([a1,a2,b,h,n1].some(x => isNaN(x))) return;
 
-      const rounded = Math.round(n2);
-      $('#result').innerHTML = `${rounded.toLocaleString()} <small>개 (소수 포함: ${fmt1(n2)} 개)</small>`;
+  if (a1 <= b){
+    warn.textContent = '완롤 바깥지름은 속지름보다 커야 합니다.';
+    warn.style.display='block'; return;
+  }
+  if (a2 <= b){
+    warn.textContent = '비교롤 바깥지름은 속지름보다 커야 합니다.';
+    warn.style.display='block'; return;
+  }
+  if (h <= 0 || n1 <= 0){
+    warn.textContent = '높이와 완롤 라벨 개수는 0보다 커야 합니다.';
+    warn.style.display='block'; return;
+  }
 
-      $('#explain').innerHTML = `비율 = (비교롤 바깥지름² − 속지름²) / (완롤 바깥지름² − 속지름²) = ${fmt1(num/den)}<br/>비교롤 개수 = 완롤 개수 × 비율 = ${n1.toLocaleString()} × ${fmt1(ratio)} = <b>${fmt1(n2)}</b> 개`;
-    };
+  // 높이는 동일 가정 → (h/h)=1, 하지만 입력 검증을 위해 h는 받습니다.
+  const num = (a2*a2 - b*b);
+  const den = (a1*a1 - b*b);
+  const ratio = num / den;
+  const n2 = n1 * ratio;
 
-    $('#calc').addEventListener('click', compute);
-    ['a1','a2','b','h','n1'].forEach(id => {
-      document.getElementById(id).addEventListener('input', ()=>{
-        if ($('#a1').value && $('#a2').value && $('#b').value && $('#h').value && $('#n1').value) compute();
-      });
-    });
+  out.textContent = `비교롤 라벨 개수 ≈ ${Math.round(n2).toLocaleString()}개 (소수 포함: ${round1(n2).toFixed(1)}개)`;
+  out.style.display='block';
+  detail.style.display='block';
+  detailText.innerHTML =
+    `비율 = (비교롤 바깥지름² − 속지름²) / (완롤 바깥지름² − 속지름²) = ${(num/den).toFixed(4)}<br>` +
+    `N₂ = N₁ × 비율 = ${n1.toLocaleString()} × ${(num/den).toFixed(4)} = ${n2.toFixed(1)}개`;
+}
 
-    $('#reset').addEventListener('click', ()=>{
-      ['a1','a2','b','h','n1'].forEach(id=>document.getElementById(id).value='');
-      $('#result').textContent='—';
-      $('#explain').textContent='';
-      $('#err').style.display='none';
-    });
-
-    $('#prefill').addEventListener('click', ()=>{
-      // 예시: 완롤 27.7 → 비교롤 26.5 / 속지름 8.5 / 높이 8.3 / 완롤 1000개
-      $('#a1').value='27.7';
-      $('#a2').value='26.5';
-      $('#b').value='8.5';
-      $('#h').value='8.3';
-      $('#n1').value='1000';
-      compute();
-    });
-  </script>
+// 자동 계산
+['a1','a2','b','h','n1'].forEach(id => {
+  const el = document.getElementById(id);
+  el.addEventListener('input', calc, {passive:true});
+});
+</script>
 </body>
 </html>
