--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>라벨 개수 추정 계산기 (지름 기반)</title>
+
+  <!-- ✅ 구글 웹폰트 추가 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+
   <style>
     :root { --bg:#0b0f14; --card:#121820; --ink:#e7eef8; --muted:#9fb3c8; --accent:#6aa6ff; --danger:#ff6a7a; }
     * { box-sizing: border-box; }
-    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; background:var(--bg); color:var(--ink); }
+    body { 
+      margin:0; 
+      font-family: 'Noto Sans KR', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; 
+      background:var(--bg); 
+      color:var(--ink); 
+    }
+    /* 이하 CSS 동일 */
+
     .wrap { max-width: 900px; margin: 24px auto; padding: 16px; }
     .title { font-weight: 800; letter-spacing: -0.3px; font-size: clamp(20px, 2.4vw, 28px); }
     .sub { color: var(--muted); margin-top: 6px; font-size: 14px; }
